Add dark mode toggler

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tom-tillistrand",
   "version": "1.0.0",
   "private": true,
-  "description": "Tom Tillistrand",
+  "description": "Personal website of Tom Tillistrand",
   "author": "Tom Tillistrand",
   "keywords": [
     "gatsby"
