--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-transformer-sharp": "^3.8.0",
     "hamburger-react": "^2.4.1",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
